--- a/css/scss/_res_sustainability.scss
+++ b/css/scss/_res_sustainability.scss
@@ -484,9 +484,6 @@
     
     }
 
-
-
-
     
 @media (max-width:480px) {
     //
@@ -521,6 +518,7 @@
     border-bottom: 1px solid var(--color-black);
     }
 // tab
+
 .tab-list{
     display: flex;
     justify-content: center;
@@ -761,4 +759,21 @@
 }
     //
 
+}
+
+@media(max-width:360px){
+    .main-tab-menu{
+        overflow-x: scroll;
+        margin: 0 25px;
+        &::-webkit-scrollbar{display: none;}
+    }
+
+    .tab-list{
+        justify-content: start;
+        margin: 0;
+        padding-bottom: 10px;
+        li{
+            white-space: nowrap;
+        }
+    }
 }
