--- a/css/sustainability.css
+++ b/css/sustainability.css
@@ -1954,3 +1954,20 @@ main {
     font-weight: bolder;
   }
 }
+@media (max-width: 360px) {
+  .main-tab-menu {
+    overflow-x: scroll;
+    margin: 0 25px;
+  }
+  .main-tab-menu::-webkit-scrollbar {
+    display: none;
+  }
+  .tab-list {
+    justify-content: start;
+    margin: 0;
+    padding-bottom: 10px;
+  }
+  .tab-list li {
+    white-space: nowrap;
+  }
+}
