--- a/css/scss/_common.scss
+++ b/css/scss/_common.scss
@@ -39,7 +39,7 @@ input, textarea{border:0;}
 // ***********************
 
 :root {
-    --color-white: #Ffffff;
+    --color-white: #f9f9f9;
     --color-gray: #F0F0F0;
     --color-black: #3C3C3C;
     --color-green1: #8CC63E;
