--- a/css/scss/sustainability.scss
+++ b/css/scss/sustainability.scss
@@ -1,7 +1,7 @@
 @import "_common";
 
 :root {
-    --color-white: #ffffff;
+    --color-white: #f9f9f9;
     --color-gray: #F0F0F0;
     --color-black: #3C3C3C;
     --color-green1: #8CC63E;
