--- a/css/index.css
+++ b/css/index.css
@@ -59,7 +59,7 @@ input, textarea {
 }
 
 :root {
-  --color-white: #Ffffff;
+  --color-white: #f9f9f9;
   --color-gray: #F0F0F0;
   --color-black: #3C3C3C;
   --color-green1: #8CC63E;
