--- a/css/sustainability.css
+++ b/css/sustainability.css
@@ -59,7 +59,7 @@ input, textarea {
 }
 
 :root {
-  --color-white: #Ffffff;
+  --color-white: #f9f9f9;
   --color-gray: #F0F0F0;
   --color-black: #3C3C3C;
   --color-green1: #8CC63E;
@@ -940,7 +940,7 @@ header {
   }
 }
 :root {
-  --color-white: #ffffff;
+  --color-white: #f9f9f9;
   --color-gray: #F0F0F0;
   --color-black: #3C3C3C;
   --color-green1: #8CC63E;
